--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <title> Homepage - Techium</title>
-        <meta name="description" content="Techium is a digital agency.">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.png" type="image/png">
+        <title>Homepage - Techium</title>
+        <meta name="description" content="Techium is a digital agency">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
         <header>
@@ -105,9 +105,9 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <article>Testimonial #1</article>
-                        <article>Testimonial #2</article>
-                        <article>Testimonial #3</article>
+                        <article></article>
+                        <article></article>
+                        <article></article>
                     </div>
                 </div>
             </section>
