--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -105,9 +105,12 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <article></article>
-                        <article></article>
-                        <article></article>
+                        <article>
+                        </article>
+                        <article>
+                        </article>
+                        <article>
+                        </article>
                     </div>
                 </div>
             </section>
