--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -105,12 +105,9 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <article>
-                        </article>
-                        <article>
-                        </article>
-                        <article>
-                        </article>
+                        <article>Testimonial #1</article>
+                        <article>Testimonial #2</article>
+                        <article>Testimonial #3</article>
                     </div>
                 </div>
             </section>
