--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -135,21 +135,15 @@
                     </header>
                     <div>
                         <article>
-                            <blockquote>
-                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
-                            </blockquote>
+                            <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
                             <cite>Yuri Y.</cite>
                         </article>
                         <article>
-                            <blockquote>
-                                <p>Thank you so much for your help. Techium company is awesome!</p>
-                            </blockquote>
+                            <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
                             <cite>Dorrie S.</cite>
                         </article>
                         <article>
-                            <blockquote>
-                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
-                            </blockquote>
+                            <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
                             <cite>Sven H.</cite>
                         </article>
                     </div>
