--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -142,3 +142,22 @@
         <footer></footer>
     </body>
 </html>
+
+            <!-- Details -->
+            <section>
+                <header>
+                    <h2>Details</h2>
+                </header>
+                <div>
+                    <h3>Default</h3>
+                    <details>
+                        <summary>Show/Hide me</summary>
+                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        <div>
+                            <h3>Open</h3>
+                            <summary>Always open</summary>
+                            <p>Pallentesque habitant morbi tristique senectus et netus et maelsuada fames ac turpis egestas</p>
+                        </div>
+                    </details>
+                </div>
+            </section>
