--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -138,10 +138,6 @@
                     </tbody>
                 </table>
             </section>
-        </main>
-        <footer></footer>
-    </body>
-</html>
 
             <!-- Details -->
             <section>
@@ -152,12 +148,18 @@
                     <h3>Default</h3>
                     <details>
                         <summary>Show/Hide me</summary>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                        <div>
-                            <h3>Open</h3>
-                            <summary>Always open</summary>
-                            <p>Pallentesque habitant morbi tristique senectus et netus et maelsuada fames ac turpis egestas</p>
-                        </div>
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    </details>
+                </div>
+                <div>
+                    <h3>Open</h3>
+                    <details open>
+                        <summary>Always open</summary>
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                     </details>
                 </div>
             </section>
+        </main>
+        <footer></footer>
+    </body>
+</html>
