--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -14,7 +14,7 @@
         <header>
             <div>
                 <div>
-                    <a href="/"><img src="logo-black.png" width="160" height="40"></a>
+                    <a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40"></a>
                 </div>
                 <nav>
                     <ul>
