--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -167,7 +167,7 @@
 
         <!-- Footer -->
         <footer>
-            <img src="logo-black.png" width="160" height="40">
+            <img src="logo-black.png" alt="Techium logo" width="160" height="40">
             <address>234 Washington Street<br>Urbana, Illinois</address>
             <div>
                 <ul>
