--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -70,19 +70,19 @@
                     <div>
                         <article>
                             <div>
-                                <img src="images/pic-work-01.jpg" alt="">
+                                <img src="pic-work-01.jpg" alt=null>
                             </div>
                             <h3><a href="#">Interior Design</a></h3>
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-work-02.jpg" alt="">
+                                <img src="pic-work-02.jpg" alt=null>
                             </div>
                             <h3><a href="#">Web Development</a></h3>
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-work-03.jpg" alt="">
+                                <img src="pic-work-03.jpg" alt=null>
                             </div>
                             <h3><a href="#">Personal Brand</a></h3>
                         </article>
@@ -98,7 +98,7 @@
                         <p>Everything about us</p>
                     </header>
                     <div>
-                        <img src="images/pic-about-us.jpg" alt="" width="460" height="447">
+                        <img src="pic-about-us.jpg" alt=null width="460" height="447">
                         <h3>Who are we</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
@@ -119,7 +119,7 @@
                     <div>
                         <article>
                             <div>
-                                <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
+                                <img src="pic-nlog-01.jpg" alt=null>
                             </div>
                             <p>Career</p>
                             <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -127,18 +127,12 @@
                             <small>By Kelly D.</small>
                         </article>
                         <article>
-                            <div>
-                                <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
-                            </div>
                             <p>Digital Life</p>
                             <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                             <small>By William A.</small>
                         </article>
                         <article>
-                            <div>
-                                <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
-                            </div>
                             <p>Social</p>
                             <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
@@ -157,15 +151,12 @@
                     </header>
                     <div>
                         <article>
-                            <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
                             <blockquote cite="Yuri Y.">I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
                             <blockquote cite="Dorrie S.">Thank you so much for your help. Techium company is awesome!</blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
                             <blockquote cite="Sven H.">I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
                         </article>
                     </div>
